file(GLOB_RECURSE srcs CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
pybind11_add_module(PyVis ${srcs})
target_link_libraries(PyVis PUBLIC Vis)
set_target_properties(PyVis PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
set_target_properties(PyVis PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
set_target_properties(PyVis PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/PyVis"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/PyVis"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/PyVis"
)
file(WRITE "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/PyVis/__init__.py" "from .PyVis import *")
